--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.15.5",
     "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^3.9.3",
+    "markdown-it": "^13.0.2",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18"
